--- a/sass/main.scss
+++ b/sass/main.scss
@@ -67,8 +67,8 @@ nav a:hover {
     height: 100vh;
     background: url('/images/background.png');
     background-size: cover;
-    background-position: right 0% bottom 45%;
-    top: -110px;
+    background-position: top 0% right 0% bottom 45%;
+
     position: relative;
     padding: 25px;
 
