--- a/sass/modules/_gallery.scss
+++ b/sass/modules/_gallery.scss
@@ -18,15 +18,54 @@
     background: none;
 }
 
+.workDiv {
+    position: relative;
+    text-align: center;
+    justify-content: center;
+}
+
+
+
+.p1 img{
+    width: 100%;
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
 
 #p1 {
     background: #05322F;
     display: inline-flex;
-    margin-left: 10px;
-    margin-right: 10px;
-
-
+    margin: 10px;
+    width: 100%;
 }
+
+
+.p1 button {
+    background-color: #4CAF50;
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+#p1:hover img{
+    opacity: 0.3;
+}
+
+#p1:hover .BtnDiv {
+    opacity: 1;
+  }
 
 .user-panel {
     flex: 0 1 100px;
@@ -36,7 +75,7 @@
 
 .projLink { 
     display: block; 
-    width: 150px;  
+    width: 100%;  
     text-decoration: none;
     margin: 0 auto;
     background-color: rgba(255, 255, 255, 0.8);
