--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -80,7 +80,7 @@
 
 
 <script type="module" src="js/main.js"></script>
-<script type="module" src="js/lightbox.js"></script>
+<!--<script type="module" src="js/lightbox.js"></script>-->
 <script type="module" src="js/burger-menu.js"></script>
 <script type="module" src="js/navOnScroll.js"></script>
 
