--- a/public/css/main.css
+++ b/public/css/main.css
@@ -369,7 +369,7 @@ button {
     display: none; }
 
   .splash-hand {
-    width: 80%;
+    width: 50%;
     margin-top: 170px;
     margin-bottom: 20px; }
 
@@ -406,8 +406,7 @@ button {
     font-size: 1rem; }
 
   .jumbotron-fluid {
-    height: 100vh;
-    margin-bottom: 80px; }
+    height: 50vh; }
 
   .splash {
     height: 200%;
@@ -416,11 +415,11 @@ button {
     top: -160px; }
 
   .splash-hand {
-    margin-top: 220px;
-    width: 50%; }
+    margin-top: 180px;
+    width: 40%; }
 
   .splash h1 {
-    margin-top: 100px;
+    margin-top: 40px;
     font-size: 2rem !important;
     margin-left: 30px;
     margin-bottom: 10px; }
@@ -430,11 +429,14 @@ button {
     line-height: 10px;
     margin-left: 30px; }
 
+  #work {
+    margin-top: 300px; }
+
   .workDiv {
     margin-top: 20px; }
 
   .workDiv img {
-    width: 20%;
+    width: 30%;
     margin-bottom: 30px; }
 
   .p1 {
@@ -474,9 +476,12 @@ button {
     display: inline-flex;
     margin: 30px; }
 
+  .jumbotron-fluid {
+    height: 100vh; }
+
   .splash {
     display: flex;
-    height: 120%;
+    height: 130%;
     top: -160px; }
 
   .splash-hand {
@@ -502,6 +507,13 @@ button {
 
   .burger-expand {
     display: none; }
+
+  #work {
+    margin-top: 200px; }
+
+  .workDiv img {
+    width: 20%;
+    margin-bottom: 30px; }
 
   .wHeader {
     width: 20%;
