--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -110,7 +110,7 @@
         display: none;
     }
     .splash-hand{
-        width: 80%;
+        width: 50%;
         margin-top: 170px;
         margin-bottom: 20px;
     }
@@ -155,8 +155,7 @@
         font-size: 1rem;
     }
     .jumbotron-fluid {
-        height: 100vh;
-        margin-bottom: 80px;
+        height: 50vh;
     }
     .splash {
         height: 200%;
@@ -165,11 +164,11 @@
         top: -160px;
     }
     .splash-hand{
-        margin-top: 220px;
-        width: 50%;
+        margin-top: 180px;
+        width: 40%;
     }
     .splash h1{
-        margin-top: 100px;
+        margin-top: 40px;
         font-size: 2rem !important;
         margin-left: 30px;
         margin-bottom: 10px;
@@ -179,12 +178,14 @@
         line-height: 10px;
         margin-left: 30px;
     }
-
+    #work {
+        margin-top: 300px;
+    }
     .workDiv {
         margin-top: 20px;
     }
     .workDiv img {
-        width: 20%;
+        width: 30%;
         margin-bottom: 30px;
     }
     .p1{
@@ -230,9 +231,13 @@
         display: inline-flex;
         margin: 30px;
     }
+
+    .jumbotron-fluid {
+        height: 100vh;
+    }
     .splash{
         display: flex;
-        height: 120%;
+        height: 130%;
         top: -160px       
     }
     .splash-hand {
@@ -258,6 +263,14 @@
     }
     .burger-expand {
         display: none;
+    }
+
+    #work {
+        margin-top: 200px;
+    }
+    .workDiv img {
+        width: 20%;
+        margin-bottom: 30px;
     }
     .wHeader {
         width: 20%;
