--- a/sass/modules/_gallery.scss
+++ b/sass/modules/_gallery.scss
@@ -7,10 +7,9 @@
 
 #work div{
     margin-bottom: 10px;
-    display: inline-flex;
     justify-content: space-around;
-    height: 350px;
-    width: 550px;
+    height: 320px;
+    width: 500px;
     align-items: center;
 }
 
@@ -23,8 +22,12 @@
     text-align: center;
     justify-content: center;
 }
-
-
+ .p1 {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+ }
 
 .p1 img{
     width: 100%;
@@ -38,9 +41,9 @@
 
 #p1 {
     background: #05322F;
-    display: inline-flex;
     margin: 10px;
-    width: 100%;
+    flex: 0 0 100%;
+    float: left;
 }
 
 
@@ -71,6 +74,8 @@
     flex: 0 1 100px;
     text-align: center;
     padding: 8px;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .projLink { 
