--- a/views/home.hbs
+++ b/views/home.hbs
@@ -22,13 +22,12 @@
 <!-- Portfolio Gallery -->
 <section id="work" class="container panel work" ></section>
  <div class="workDiv clearfix col-lg-12 col-sm-12">
-        <hr><img src="images/Work-Header.png" class="wHeader" alt="Work Header"><hr>
-
+        <hr><img src="images/Work-Header.png" class="wHeader" alt="Work Header">
 </div>
 
 <div class="row">
     {{#each piece}}
-         <div class="p1 user-panel col-xs-6 col-lg-6">
+         <div class="p1 user-panel col-xs-6 col-lg-3">
             <div id="p1">
                 <img src="{{DispImg}}" alt="Display Img">
                
@@ -38,22 +37,24 @@
                 
             </div>
         </div>
-    </div>
     {{/each}}
+</div>
+
     </div>
     </div>
 </section>
 
- <!-- Popup -->
+ <!-- Popup for each piece-->
 <div class="lightbox container col-sm-12 col-md-12 col-lg-12">
     <div class="row">
         <span class="close">x</span>
         <div class="lb-content container-fluid">
         </div>  
             <div class="projDesc">
-                <img src="{{ OtherImg }}">
+                <img src="{{ OtherImg }}" alt="Slideshow">
                 <p>hahshjchjwdjqwkjkw</p>
-                <button href="wave.hbs"></button>
+                <button href="wave.hbs">Button</button>
+
             </div>   
     </div>
 </div>
