--- a/views/home.hbs
+++ b/views/home.hbs
@@ -22,7 +22,7 @@
 <!-- Portfolio Gallery -->
 <section id="work" class="container panel work" ></section>
  <div class="workDiv clearfix col-lg-12 col-sm-12">
-        <hr><img src="images/Work-Header.png" class="wHeader" alt="Work Header">
+        <div class="divider"></div><img src="images/Work-Header.png" class="wHeader" alt="Work Header"><div class="divider"></div>
 </div>
 
 <div class="row">
