--- a/sass/modules/_gallery.scss
+++ b/sass/modules/_gallery.scss
@@ -17,6 +17,18 @@
     background: none;
 }
 
+.wHeader {
+    opacity: 1;
+}
+
+
+.divider {
+    display: inline-block;
+    border-bottom: #ECE0C7 3px solid;
+    width: 25%;
+    margin: 30px;
+  }
+
 .workDiv {
     position: relative;
     text-align: center;
