--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -75,7 +75,33 @@
        
     </main>
 
- 
+    <div class="container-fluid">
+        <div class="row aboutMe">
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                <img src="images/About-Header.png" class="abt-header">
+                <div class="abt-txt">
+                    <img src="images/about.png" alt="Avatar" class="abt-img">
+                    <h1>Hey!</h1>
+                    <p>My name’s Syrrel &#91;Sai-Rehl&#93; and I am an Interactive Media Design student from London, Ontario. Aside from my love of bubble teas, why UX and UI? Simple, I enjoy turning the technicalities of technology accessible, beautiful, and easy to understand for users.
+                    <br>
+                    <br>
+                    If I’m not designing or coding, I’m probably binge-watching TEDTalks or 90 Days Fiancé on YouTube.</p>
+                </div>
+                <hr>
+                <div class="demoreel">
+                    <iframe></iframe>
+                </div>
+            </div>
+        </div> 
+    </div>
+
+    <div class="container-fluid">
+        <div class="row edu">
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                
+            </div>
+        </div>
+    </div>
 
 
 
