--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -60,8 +60,22 @@
         font-size: .7rem;
         line-height: 10px;
     }
+    .workDiv {
+        width: 100vw;
+    }
     .wHeader {
-        width: 50%;
+        width: 40%;
+    }
+    .divider {
+        width: 20%;
+        margin: 5px;
+    }
+    #p1 {
+        width: 100%;
+        background: #05322F;
+        //margin: 10px;
+        // flex: 0 0 100%;
+        // float: left;
     }
 }
 
@@ -194,6 +208,82 @@
     #p1 {
         width: 450px;
     }
+    .close {    
+        right: 24px;
+        top: 10px;
+        cursor: pointer;
+        font-size: 16px;
+        position: fixed;
+        padding: 2px 14px 5px;
+      color: black; 
+      font-size: 24px;  
+      font-weight: bold;
+        
+    }
+    
+    .close:hover {
+        color: darkgray;
+      }
+    
+    .projDesc {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #e2d2c0;
+    }
+    
+    .projGallery {
+        width: 50%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    @-webkit-keyframes animatetop {
+        from {top:-300px; opacity:0} 
+        to {top:0; opacity:1}
+      }
+    @keyframes animatetop {
+        from {top:-300px; opacity:0}
+        to {top:0; opacity:1}
+      }
+      .projDesc {
+        width: 50%;
+    }
+    
+    .lb-content {
+        position: relative; 
+        float: left;
+        justify-content: center;
+        align-items: center;
+        background-color: white;
+        padding: 20px; 
+        margin: auto; 
+        width: 50%;
+        height: 100vh; 
+        -webkit-animation-name: animatetop;
+        -webkit-animation-duration: 0.4s;
+        animation-name: animatetop;
+        animation-duration: 0.4s
+    }
+    .mosaic {
+        margin: 20px auto;
+        width:100%;
+        display:grid;
+        grid-template-columns: 300px 300px;
+        grid-row: auto auto;
+        grid-column-gap: 20px;
+        grid-row-gap: 20px;
+        align-items:center;
+        justify-content:center;
+    }
+    #p1 {
+        width: 300px;
+        padding:20px;
+        display:flex;
+    }
 }
 
 @media (min-width: 1200px){
@@ -269,12 +359,98 @@
         margin-top: 200px;
     }
     .workDiv img {
-        width: 20%;
+        width: 30%;
         margin-bottom: 30px;
     }
     .wHeader {
         width: 20%;
         margin-bottom: 30px;
+    }
+    .divider {
+        width: 30%;
+    }
+ 
+
+    .close {    
+        right: 24px;
+        top: 10px;
+        cursor: pointer;
+        font-size: 16px;
+        position: fixed;
+        padding: 2px 14px 5px;
+      color: black; 
+      font-size: 24px;  
+      font-weight: bold;
+        
+    }
+    
+    .close:hover {
+        color: darkgray;
+      }
+    
+    .projDesc {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #e2d2c0;
+    }
+    
+    .projGallery {
+        width: 50%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    @-webkit-keyframes animatetop {
+        from {top:-300px; opacity:0} 
+        to {top:0; opacity:1}
+      }
+    @keyframes animatetop {
+        from {top:-300px; opacity:0}
+        to {top:0; opacity:1}
+      }
+      .projDesc {
+        width: 50%;
+    }
+    
+    .lb-content {
+        position: relative; 
+        float: left;
+        justify-content: center;
+        align-items: center;
+        background-color: white;
+        padding: 20px; 
+        margin: auto; 
+        width: 50%;
+        height: 100vh; 
+        -webkit-animation-name: animatetop;
+        -webkit-animation-duration: 0.4s;
+        animation-name: animatetop;
+        animation-duration: 0.4s
+    }
+    .mosaic {
+        margin: 0 auto;
+        width:100%;
+        display:grid;
+        grid-template-columns: 400px 400px;
+        grid-row: auto auto;
+        grid-column-gap: 20px;
+        grid-row-gap: 10px;
+        align-items:center;
+        justify-content:center;
+        text-align: center;
+    }
+    .p1 {
+      
+        padding: 20px;
+        display: flex;
+        right: 40%;
+    }
+    #p1 {
+        width: 400px;
     }
 }
 
@@ -318,5 +494,65 @@
     }
     .splash h1 p{
         margin-top: 300px;
+    }
+    .close {    
+        right: 24px;
+        top: 10px;
+        cursor: pointer;
+        font-size: 16px;
+        position: fixed;
+        padding: 2px 14px 5px;
+      color: black; 
+      font-size: 24px;  
+      font-weight: bold;
+        
+    }
+    
+    .close:hover {
+        color: darkgray;
+      }
+    
+    .projDesc {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #e2d2c0;
+    }
+    
+    .projGallery {
+        width: 50%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    @-webkit-keyframes animatetop {
+        from {top:-300px; opacity:0} 
+        to {top:0; opacity:1}
+      }
+    @keyframes animatetop {
+        from {top:-300px; opacity:0}
+        to {top:0; opacity:1}
+      }
+      .projDesc {
+        width: 50%;
+    }
+    
+    .lb-content {
+        position: relative; 
+        float: left;
+        justify-content: center;
+        align-items: center;
+        background-color: white;
+        padding: 20px; 
+        margin: auto; 
+        width: 50%;
+        height: 100vh; 
+        -webkit-animation-name: animatetop;
+        -webkit-animation-duration: 0.4s;
+        animation-name: animatetop;
+        animation-duration: 0.4s
     }
 }
