education and skills sections for mobile done

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -96,13 +96,91 @@
     </div>
 
     <div class="container-fluid">
-        <div class="row edu">
+        <div class="row education">
             <div class="col-sm-12 col-md-12 col-lg-12">
-                
+                <div class="edu">
+                    <img src="images/Edu-Header.png" class="abt-header">
+                    <h4 class="edu-cert">DIPLOMA</h4>
+                    <h1>INTERACTIVE MEDIA DESIGN</h1>
+                    <h4 class="edu-school">FANSHAWE COLLEGE</h4>
+
+                    <br>
+                    <br>
+
+                    <h4 class="edu-cert">BACHELOR'S DEGREE</h4>
+                    <h1>MEDIA THEORY AND PRODUCTION</h1>
+                    <h4 class="edu-school">FANSHAWE COLLEGE</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+<hr class="vr">
+     <div class="container-fluid">
+        <div class="row skills-cont">
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                <div class="skills-txt">
+                    <img src="images/Skills-Header.png" class="skills-header">
+                    <h1>INTERESTS</h1>
+                    <p>User Interface Design</p>
+                    <p>User Experience Design</p>
+                    <p>Graphic Design</p>
+                    <p>Branding Development</p>
+                    <p>Web Development</p>
+                    <p>Product Design</p>
+
+
+                    <br>
+                    <br>
+
+                    <h1>CODE</h1>
+                    <p>HMTL5</p>
+                    <p>CSS</p>
+                    <p>JavaScript</p>
+                    <p>BootStrap</p>
+                    <p>Sass</p>
+                    <p>MySQL </p>
+
+                    <br>
+                    <br>
+
+                    <h1>TOOLS</h1>
+                    <p>Photoshop</p>
+                    <p>Adobe Illustrator</p>
+                    <p>Adobe InDesign</p>
+                    <p>Adobe After Effects</p>
+                    <p>Cinema 4D</p>
+                    <p>GitHub</p>
+                    <p>Heroku</p>
+
+                </div>
             </div>
         </div>
     </div>
 
+<div class="container">
+    <div class="row back-top">
+        <a href="/"><h2 class="top">Back to the Top</h2></a>
+    </div>
+</div>
+<hr class="vr">
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                <div class="contact">
+                    <img src="images/Contact-Header.png" alt="Contact Header" class="abt-header">
+                    <p>Want to collaborate? Or do you have
+                    any inquiries? Contact me <a href="#">here</a>.</p> 
+                </div>
+            </div>
+        </div>
+    </div>
+
+<footer class="container-fluid">
+    <div class="row">
+        
+    </div>
+</footer>
 
 
 <script type="module" src="js/main.js"></script>
