--- a/public/css/main.css
+++ b/public/css/main.css
@@ -235,6 +235,71 @@ hr {
   margin-top: 50px;
   margin-bottom: 60px; }
 
+.education {
+  margin-top: 30px; }
+
+.edu {
+  background-color: #fff;
+  padding-top: 50px;
+  margin-top: 30px;
+  margin-bottom: 50px;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 3px 3px 5px 6px #ccc;
+  -moz-box-shadow: 3px 3px 5px 6px #ccc;
+  -webkit-box-shadow: 3px 3px 5px 6px #ccc;
+  font-size: .8rem;
+  line-height: 25px; }
+
+.edu h1 {
+  font-size: 1.2rem !important; }
+
+.edu-cert {
+  color: #DF9575;
+  font-size: 1rem; }
+
+.edu-school {
+  color: #707070;
+  font-size: 1rem; }
+
+.skills-header {
+  width: 50%;
+  margin-bottom: 30px; }
+
+.skills-txt {
+  background-color: #fff;
+  padding-top: 50px;
+  margin-top: 30px;
+  margin-bottom: 50px;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 3px 3px 5px 6px #ccc;
+  -moz-box-shadow: 3px 3px 5px 6px #ccc;
+  -webkit-box-shadow: 3px 3px 5px 6px #ccc;
+  font-size: .8rem;
+  line-height: 25px; }
+
+.skills-txt h1 {
+  font-size: 1.2rem !important; }
+
+.vr {
+  width: 1px;
+  height: 15%;
+  left: 50%;
+  background-color: #8E391E; }
+
+.back-top a {
+  text-decoration: none;
+  color: #707070; }
+
+.top {
+  left: 50%;
+  font-size: 1rem !important; }
+
+.contact {
+  text-align: center;
+  margin-bottom: 50px; }
+
 * {
   margin: 0 auto;
   padding: 0px; }
