--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -178,8 +178,30 @@
 
 <footer class="container-fluid">
     <div class="row">
-        
+        <div class="col-sm-12 col-md-12 col-lg-12">
+            <div class="f-nav">
+                <img src="images/logo/LOGO.svg" alt="Footer Logo">
+                <ul class="f-links">
+                    <li> 
+                        <a href="/">HOME</a>
+                    </li>
+                    <li> 
+                        <a href="/#work">WORK</a>
+                    </li>
+                    <li>
+                        <a href="/#about">ABOUT</a>
+                    </li>
+                    <li>
+                        <a href="/#contact">CONTACT</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
+    <div class="container-fluid col-sm-12 col-md-12 col-lg-12">
+             <div class="copyright">
+                <p>© 2019 Syrrel Cabiling</p>
+            </div>
 </footer>
 
 
