--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import 'modules/_gallery';
 @import 'modules/_lightbox';
 @import 'modules/_about';
+@import 'modules/_footer';
 
 * {
     margin: 0 auto;
