--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -48,13 +48,13 @@
                         <a href="/">HOME</a>
                     </li>
                     <li> 
-                        <a href="#work">WORK</a>
+                        <a href="/#work">WORK</a>
                     </li>
                     <li>
-                        <a href="#about">ABOUT</a>
+                        <a href="/#about">ABOUT</a>
                     </li>
                     <li>
-                        <a href="#contact">CONTACT</a>
+                        <a href="/#contact">CONTACT</a>
                     </li>
                 </ul>
                 <div class="burger-menu d-sm-block d-lg-none d-xl-none">
@@ -75,7 +75,7 @@
        
     </main>
 
-    <div class="container-fluid">
+    <div class="container-fluid"  id="#about">
         <div class="row aboutMe">
             <div class="col-sm-12 col-md-12 col-lg-12">
                 <img src="images/About-Header.png" class="abt-header">
@@ -180,7 +180,7 @@
     <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12">
             <div class="f-nav">
-                <img src="images/logo/LOGO.svg" alt="Footer Logo">
+                <img src="images/logo/white-Logo.svg" alt="Footer Logo">
                 <ul class="f-links">
                     <li> 
                         <a href="/">HOME</a>
@@ -197,12 +197,13 @@
                 </ul>
             </div>
         </div>
-    </div>
-    <div class="container-fluid col-sm-12 col-md-12 col-lg-12">
+        <div class="container-fluid col-sm-12 col-md-12 col-lg-12">
              <div class="copyright">
                 <p>© 2019 Syrrel Cabiling</p>
             </div>
+        </div>
 </footer>
+    
 
 
 <script type="module" src="js/main.js"></script>
