--- a/public/css/main.css
+++ b/public/css/main.css
@@ -301,9 +301,13 @@ hr {
   margin-bottom: 50px; }
 
 footer {
-  background-color: #8E391E;
   text-align: center;
-  padding-top: 20px; }
+  background-color: #8E391E;
+  font-size: .7rem !important;
+  text-align: center;
+  padding-top: 20px;
+  margin: 0;
+  padding-left: 0px; }
 
 .f-links {
   display: flex;
@@ -315,14 +319,20 @@ footer {
   width: 20%;
   margin-bottom: 10px; }
 
+.f-links a {
+  text-decoration: none;
+  color: #fff; }
+
 .f-nav img {
   width: 50%; }
 
 .copyright {
   background-color: #792F18;
-  height: 5vh;
+  height: 6vh;
   width: 100vw;
-  bottom: 0; }
+  bottom: 0;
+  padding: 5px;
+  left: -20px; }
 
 * {
   margin: 0 auto;
@@ -684,7 +694,54 @@ button {
   #p1 {
     width: 300px;
     padding: 20px;
-    display: flex; } }
+    display: flex; }
+
+  .aboutMe {
+    padding-top: 100px;
+    padding-left: 40px;
+    padding-right: 40px; }
+
+  .abt-header {
+    width: 30%;
+    margin-bottom: 30px; }
+
+  .abt-txt {
+    width: 90%; }
+
+  .abt-img {
+    width: 20%; }
+
+  .demoreel {
+    margin-top: 50px;
+    margin-bottom: 80px;
+    text-align: center; }
+
+  .demoreel iframe {
+    width: 100%;
+    height: 100%; }
+
+  .education {
+    margin-top: 60px; }
+
+  .edu {
+    width: 70%; }
+
+  .skills-header {
+    width: 22%; }
+
+  .skills-txt {
+    width: 70%; }
+
+  .skills-txt h1 {
+    font-size: 1.4rem !important; }
+
+  footer {
+    margin-top: 50px;
+    padding-top: 30px; }
+
+  .f-nav img {
+    width: 20%;
+    margin-bottom: 30px; } }
 @media (min-width: 1200px) {
   body {
     overflow-x: hidden; }
@@ -762,6 +819,30 @@ button {
 
   .divider {
     width: 30%; }
+
+  .projLink {
+    border: 2px solid #fff;
+    outline: 5px solid #05322F;
+    background: #05322F;
+    display: block;
+    width: 60%;
+    text-decoration: none;
+    margin: 0 auto;
+    padding: 5px; }
+
+  .p1 button {
+    position: absolute;
+    background-color: #05322F;
+    width: 200px;
+    color: white;
+    padding: 16px 32px;
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    left: 165%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center; }
 
   .close {
     right: 24px;
@@ -878,6 +959,16 @@ button {
 
   .splash h1 p {
     margin-top: 300px; }
+
+  .projLink {
+    border: 2px solid #fff;
+    outline: 5px solid #05322F;
+    background: #05322F;
+    display: block;
+    width: 100%;
+    text-decoration: none;
+    margin: 0 auto;
+    padding: 5px; }
 
   .close {
     right: 24px;
