--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -1,13 +1,16 @@
 footer {
+    text-align: center;
     background-color: #8E391E;
+    font-size: .7rem !important;
     text-align: center;
     padding-top: 20px;
+    margin: 0;
+    padding-left: 0px;
 }
 
 .f-links {
     display: flex;
     justify-content: space-around;
-
 }
 
 .f-links li {
@@ -17,13 +20,20 @@ footer {
     margin-bottom: 10px;
 }
 
+.f-links a {
+    text-decoration: none;
+    color: #fff;
+}
+
 .f-nav img {
     width: 50%;
 }
 
 .copyright {
     background-color: #792F18;
-    height: 5vh;
+    height: 6vh;
     width: 100vw;
     bottom: 0;
+    padding: 5px;
+    left: -20px;
 }
