--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -284,6 +284,54 @@
         padding:20px;
         display:flex;
     }
+    .aboutMe {
+        padding-top: 100px;
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+    .abt-header {
+        width: 30%;
+        margin-bottom: 30px;
+    }
+    .abt-txt {
+        width: 90%;
+    }
+    .abt-img {
+        width: 20%;
+    }
+    .demoreel {
+        margin-top: 50px;
+        margin-bottom: 80px;
+        text-align: center;
+    }
+    .demoreel iframe{
+        width: 100%;
+        height: 100%;
+    }
+    .education {
+        margin-top: 60px;
+    }
+    .edu {
+        width: 70%;
+    }   
+    .skills-header {
+        width: 22%;
+    }
+    .skills-txt {
+        width: 70%;
+    }
+    .skills-txt h1 {
+        font-size: 1.4rem !important;
+    }
+    footer {
+        margin-top: 50px;
+        padding-top: 30px;
+    }
+
+    .f-nav img {
+        width: 20%;
+        margin-bottom: 30px;
+    }
 }
 
 @media (min-width: 1200px){
@@ -369,7 +417,33 @@
     .divider {
         width: 30%;
     }
- 
+    
+    .projLink { 
+
+        border: 2px solid #fff;
+        outline: 5px solid #05322F;
+        background: #05322F;
+        display: block; 
+        width: 60%;  
+        text-decoration: none;
+        margin: 0 auto;
+        padding: 5px;
+    }
+
+    .p1 button {
+        position: absolute;
+        background-color: #05322F;
+        width: 200px;
+        color: white;
+        padding: 16px 32px;
+        transition: .5s ease;
+        opacity: 0;
+        position: absolute;
+        left: 165%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        text-align: center;
+    }
 
     .close {    
         right: 24px;
@@ -494,6 +568,17 @@
     }
     .splash h1 p{
         margin-top: 300px;
+    }
+    .projLink { 
+
+        border: 2px solid #fff;
+        outline: 5px solid #05322F;
+        background: #05322F;
+        display: block; 
+        width: 100%;  
+        text-decoration: none;
+        margin: 0 auto;
+        padding: 5px;
     }
     .close {    
         right: 24px;
